@@ -136,6 +136,9 @@ Unreleased changes (1.0-dev)
 46. NUTCH-554 - Generator throws IOException on invalid urls.
     (Brian Whitman via ab)
 
+47. NUTCH-529 - NodeWalker.skipChildren doesn't work for more than 1 child.
+    (Emmanuel Joke via dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
